# erp_workflow_ts

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DATABASE_AUDIT_MISSING_ROUTING.md  README.md  build-all.bat  docker-compose.yml  package-lock.json  package.json  probe-800w-full.js  probe-800w.js  push-to-server.bat  read_spreadsheet.py  restart-on-crash.bat  setup-git.bat  shopfloor_plan_mar23.md  snmp-discover.js  standardize-network-drive.ps1  start-dev-local-old.bat  start-dev-local.bat  start-dev.bat  start-portal.bat  start-production.bat  tsconfig.json
.github/: copilot-instructions.md
docs/: AGENT_01_LOG.md  AGENT_02_LOG.md  AGENT_03_LOG.md  AGENT_04_LOG.md  AGENT_05_LOG.md  AGENT_06_LOG.md  CLARIFICATION_NEEDED.md  COMPREHENSIVE_AUDIT.md  CUSTOMER_LIST.md  DAILY_TLDR_EMAIL_PLAN.md  EMAIL_TEMPLATES.md  EQUIPMENT_CONNECTIONS.md  ERP_GAP_ANALYSIS.md  FILE_MANAGEMENT_INSTRUCTIONS.md  ITEM_MASTER_MANAGEMENT_PAGE.md  PORT_ASSIGNMENTS.md  Production List setup  SECURITY_AUDIT_REPORT.md  SECURITY_NEXT_STEPS.md  SERVER_DEPLOYMENT.md  TAURI_ARCHITECTURE.md  TEST_FINDINGS.md  WILDE SIGNS CUSTOMER LIST.xlsm  WILDE_SIGNS_ERP_FEATURES.md
scripts/: archive_xlsx_to_json.py  audit-linked-data-counts.ts  check-zund-shares.ps1  clean-workspace.mjs  cleanup-dev-processes.ps1  create-zund1-share.ps1  create-zund2-cutcenter-share.ps1  diagnose-equipment.ps1  ensure-postgres.ps1  fix-thrive-rip2.ps1  fix-zund-share.ps1  import-archive-completed-orders.ts  link-hh-global-print-files.ts  map-all-zunds.ps1  serve-kpi-dashboard.mjs
(+60 files in other folders)
